extends Node2D

## ä¸»æ¸¸æˆæ§åˆ¶å™¨

# æ¸¸æˆæ¨¡å¼æ§åˆ¶å™¨
var game_mode: BaseGameModeController = null
var renderer: GameRenderer = null
var input_handler: InputHandler = null
var music_visualizer: MusicVisualizer = null

# UIèŠ‚ç‚¹
@onready var score_label = $UI/ScoreLabel
@onready var lines_label = $UI/LinesLabel
@onready var next_label = $UI/NextLabel
@onready var combo_label = $UI/ComboLabel
@onready var game_over_label = $UI/GameOverLabel
@onready var controls_label = $UI/ControlsLabel
@onready var scoring_label = $UI/ScoringLabel
@onready var pause_menu = $UI/PauseMenu
@onready var game_over_menu = $UI/GameOverMenu
@onready var song_complete_menu = $UI/SongCompleteMenu
@onready var chinese_lyric_label = $UI/ChineseLyricLabel
@onready var rift_meter_label = $UI/RiftMeterLabel
@onready var beat_calibrator_label = $UI/BeatCalibratorLabel
@onready var music_player = $MusicPlayer

func _ready():
	# åˆå§‹åŒ–ç»„ä»¶
	setup_components()
	setup_ui()
	
	# è¿æ¥éŸ³ä¹æ’­æ”¾å™¨å®Œæˆä¿¡å·
	music_player.finished.connect(_on_music_finished)
	print("[åˆå§‹åŒ–] éŸ³ä¹æ’­æ”¾å™¨finishedä¿¡å·å·²è¿æ¥åˆ°_on_music_finished")
	
	# è®¾ç½®çª—å£å¤§å°
	get_window().size = Global.resolutions[Global.current_resolution_index]
	
	# å¯åŠ¨å¯¹åº”æ¨¡å¼
	if Global.lyric_mode_enabled:
		start_lyric_mode()
	else:
		start_classic_mode()

func setup_components():
	"""åˆå§‹åŒ–æ ¸å¿ƒç»„ä»¶"""
	# åˆ›å»ºè¾“å…¥å¤„ç†å™¨
	input_handler = InputHandler.new()
	add_child(input_handler)
	
	# åˆ›å»ºæ¸²æŸ“å™¨
	renderer = GameRenderer.new()
	add_child(renderer)
	
	# è¿æ¥è¾“å…¥ä¿¡å·
	input_handler.move_left.connect(_on_move_left)
	input_handler.move_right.connect(_on_move_right)
	input_handler.move_down.connect(_on_move_down)
	input_handler.rotate.connect(_on_rotate)
	input_handler.hard_drop.connect(_on_hard_drop)
	input_handler.pause_toggle.connect(_on_pause_toggle)

func setup_ui():
	"""è®¾ç½®UI"""
	game_over_label.hide()
	pause_menu.hide()
	game_over_menu.hide()
	song_complete_menu.hide()
	combo_label.text = ""  # åˆå§‹åŒ–è¿å‡»æ ‡ç­¾
	update_ui_texts()
	
	# è¿æ¥èœå•ä¿¡å·
	pause_menu.resume_game.connect(_on_resume_game)
	pause_menu.restart_game.connect(_on_restart_game)
	pause_menu.goto_options.connect(_on_goto_options)
	pause_menu.goto_menu.connect(_on_goto_menu)
	game_over_menu.restart_game.connect(_on_restart_game)
	game_over_menu.goto_menu.connect(_on_goto_menu)
	song_complete_menu.restart_game.connect(_on_restart_game)
	song_complete_menu.select_song.connect(_on_select_song)
	song_complete_menu.goto_menu.connect(_on_goto_menu)

func start_classic_mode():
	"""å¯åŠ¨ç»å…¸æ¨¡å¼"""
	print("=== è¿›å…¥ç»å…¸æ¨¡å¼ ===")
	
	game_mode = ClassicModeController.new()
	add_child(game_mode)
	game_mode.initialize()
	
	# è¿æ¥æ¸¸æˆæ¨¡å¼ä¿¡å·
	game_mode.game_over_signal.connect(_on_game_over)
	game_mode.score_changed.connect(_on_score_changed)
	game_mode.lines_changed.connect(_on_lines_changed)
	game_mode.combo_changed.connect(_on_combo_changed)
	game_mode.special_block_effect.connect(_on_special_block_effect)
	game_mode.snake_mode_changed.connect(_on_snake_mode_changed)
	
	# è®¾ç½®æ¸²æŸ“å™¨
	renderer.set_lyric_mode(false)
	
	# UIè®¾ç½®
	chinese_lyric_label.hide()
	scoring_label.show()
	
	# åŠ è½½BGM
	var bgm = load("res://musics/bgm/è´§éƒ8bit(ĞšĞ¾Ñ€Ğ¾Ğ±ĞµĞ¹Ğ½Ğ¸ĞºĞ¸).mp3")
	if bgm:
		music_player.stream = bgm
		music_player.volume_db = -8
		music_player.play()
		print("ç»å…¸æ¨¡å¼èƒŒæ™¯éŸ³ä¹å·²åŠ è½½")

func start_lyric_mode():
	"""å¯åŠ¨æ­Œè¯æ¨¡å¼"""
	print("=== è¿›å…¥æ­Œæ›²æ¨¡å¼ ===")
	
	# åˆ›å»ºéŸ³ä¹å¯è§†åŒ–èƒŒæ™¯
	_setup_music_visualizer()
	
	# å¦‚æœæ²¡æœ‰é€‰æ‹©æ­Œæ›²ï¼Œä½¿ç”¨é»˜è®¤æ­Œæ›²
	if Global.selected_song.is_empty():
		Global.selected_song = {
			"name": "Masked bitcH",
			"artist": "ã‚®ã‚¬P feat. GUMI",
			"music_file": "res://musics/ã‚®ã‚¬P GUMI - Masked bitcH.mp3",
			"lyric_file": "res://musics/lyrics/Masked bitcH.lrc"
		}
	
	game_mode = LyricModeController.new()
	add_child(game_mode)
	
	# åŠ è½½æ­Œæ›²
	game_mode.load_song(Global.selected_song)
	game_mode.start_song()
	
	# è¿æ¥æ¸¸æˆæ¨¡å¼ä¿¡å·
	game_mode.game_over_signal.connect(_on_game_over)
	game_mode.score_changed.connect(_on_score_changed)
	game_mode.lines_changed.connect(_on_lines_changed)
	game_mode.combo_changed.connect(_on_combo_changed)
	game_mode.lyric_changed.connect(_on_lyric_changed)
	game_mode.all_blocks_placed.connect(_on_all_blocks_placed)
	game_mode.beat_rating_changed.connect(_on_beat_rating_changed)
	
	# è®¾ç½®æ¸²æŸ“å™¨
	renderer.set_lyric_mode(true)
	
	# UIè®¾ç½®
	scoring_label.show()  # æ­Œè¯æ¨¡å¼ä¹Ÿæ˜¾ç¤ºè®¡åˆ†è§„åˆ™
	chinese_lyric_label.show()
	chinese_lyric_label.z_index = -1  # ç¡®ä¿åœ¨æš‚åœèœå•ä¸‹æ–¹
	# åŠ è½½æ­Œè¯åæ ¹æ®æ˜¯å¦ä¸­æ–‡æ­Œæ›²æ›´æ–°æ ‡ç­¾
	chinese_lyric_label.text = "ä¸­æ–‡æ­Œè¯:\nå‡†å¤‡å¼€å§‹..." if game_mode.is_chinese_song else "ä¸­æ–‡ç¿»è¯‘:\nå‡†å¤‡å¼€å§‹..."
	
	# åŠ è½½éŸ³ä¹
	var music = load(Global.selected_song["music_file"])
	if music:
		music_player.stream = music
		music_player.play()
		# è®¾ç½®æ­Œæ›²æ—¶é•¿åˆ°æ¸¸æˆæ¨¡å¼
		game_mode.song_duration = music_player.stream.get_length()
		print("éŸ³ä¹åŠ è½½æˆåŠŸ: ", Global.selected_song["name"])
		print("[éŸ³ä¹æ’­æ”¾å™¨] streamå·²è®¾ç½®ï¼Œå¼€å§‹æ’­æ”¾")
		print("[éŸ³ä¹æ’­æ”¾å™¨] éŸ³ä¹é•¿åº¦: ", game_mode.song_duration)
	else:
		print("[é”™è¯¯] æ— æ³•åŠ è½½éŸ³ä¹: ", Global.selected_song["music_file"])

func _process(delta):
	if game_mode == null:
		return
	
	# æ›´æ–°æ¸¸æˆé€»è¾‘
	game_mode.update(delta)
	
	# æ›´æ–°è£‚éš™ä»ªå†·å´ï¼ˆåªæœ‰æœªæš‚åœæ—¶æ‰æ›´æ–°ï¼‰
	if game_mode.equipment_system and not game_mode.paused:
		game_mode.equipment_system.update_rift_meter(delta)
	
	# æ›´æ–°è£‚éš™ä»ªå†·å´æ˜¾ç¤ºï¼ˆæš‚åœæ—¶éšè—ï¼‰
	_update_rift_meter_display()
	
	# æ›´æ–°è´ªåƒè›‡ï¼ˆå¦‚æœåœ¨è´ªåƒè›‡æ¨¡å¼ï¼‰
	if game_mode is ClassicModeController and game_mode.is_snake_mode:
		game_mode.update_snake(delta)
	
	# æ›´æ–°èŠ‚æ‹è¯„ä»·æ˜¾ç¤ºè®¡æ—¶å™¨
	if renderer:
		renderer.update_beat_timer(delta)
	
	# æ›´æ–°èŠ‚æ‹è¯„ä»·æ˜¾ç¤ºè®¡æ—¶å™¨
	if beat_rating_display_timer > 0:
		beat_rating_display_timer -= delta
	
	# æ›´æ–°æ¸²æŸ“å™¨
	update_renderer()
	
	# æ›´æ–°èŠ‚æ‹æ ¡å¯¹å™¨æ˜¾ç¤º
	_update_beat_calibrator_display()

func _update_rift_meter_display():
	"""æ›´æ–°è£‚éš™ä»ªå†·å´æ˜¾ç¤º"""
	if not rift_meter_label:
		return
	
	# æš‚åœæ—¶éšè—è£‚éš™ä»ªæ˜¾ç¤º
	if game_mode and game_mode.paused:
		rift_meter_label.text = ""
		return
	
	# åªæœ‰è£…å¤‡äº†è£‚éš™ä»ªæ‰æ˜¾ç¤º
	if not game_mode or not game_mode.equipment_system.is_equipped(EquipmentSystem.EquipmentType.RIFT_METER):
		rift_meter_label.text = ""
		return
	
	var cooldown = game_mode.equipment_system.get_rift_meter_cooldown()
	if cooldown > 0:
		# æ˜¾ç¤ºå†·å´ä¸­ï¼ˆæµ…ç°è‰²ï¼‰
		var cooldown_text = "è£‚éš™ä»ª: %.1fs" % cooldown if Global.current_language == "zh" else "Rift: %.1fs" % cooldown
		rift_meter_label.text = cooldown_text
		rift_meter_label.add_theme_color_override("font_color", Color(0.75, 0.75, 0.75, 1))  # æµ…ç°è‰²è¡¨ç¤ºå†·å´ä¸­
	else:
		# å¯ä»¥ä½¿ç”¨
		var ready_text = "è£‚éš™ä»ª: æŒ‰S" if Global.current_language == "zh" else "Rift: Press S"
		rift_meter_label.text = ready_text
		rift_meter_label.add_theme_color_override("font_color", Color(0.3, 0.9, 1.0, 1))  # é’è‰²è¡¨ç¤ºå°±ç»ª

# èŠ‚æ‹è¯„ä»·æ˜¾ç¤ºçŠ¶æ€
var beat_rating_display_timer: float = 0.0
var last_beat_display_text: String = ""
var last_beat_display_color: Color = Color.WHITE

func _update_beat_calibrator_display():
	"""æ›´æ–°èŠ‚æ‹æ ¡å¯¹å™¨çŠ¶æ€æ˜¾ç¤º"""
	if not beat_calibrator_label:
		return
	
	# åªåœ¨æ­Œæ›²æ¨¡å¼ä¸”è£…å¤‡äº†èŠ‚æ‹æ ¡å¯¹å™¨æ—¶æ˜¾ç¤º
	if not game_mode is LyricModeController:
		beat_calibrator_label.text = ""
		return
	
	# æš‚åœæ—¶éšè—
	if game_mode.paused:
		beat_calibrator_label.text = ""
		return
	
	if not game_mode.equipment_system.is_equipped(EquipmentSystem.EquipmentType.BEAT_CALIBRATOR):
		beat_calibrator_label.text = ""
		return
	
	# å¦‚æœæœ‰æœ€è¿‘çš„è¯„ä»·æ˜¾ç¤ºï¼Œä¿æŒæ˜¾ç¤º
	if beat_rating_display_timer > 0:
		beat_calibrator_label.text = last_beat_display_text
		beat_calibrator_label.add_theme_color_override("font_color", last_beat_display_color)
	else:
		# æ²¡æœ‰è¯„ä»·æ—¶æ˜¾ç¤ºç­‰å¾…çŠ¶æ€
		var combo = game_mode.equipment_system.get_beat_combo()
		var status_text = "â™ª èŠ‚æ‹æ ¡å¯¹å™¨" if Global.current_language == "zh" else "â™ª Beat Calibrator"
		if combo > 0:
			status_text += " x" + str(combo)
		beat_calibrator_label.text = status_text
		beat_calibrator_label.add_theme_color_override("font_color", Color(1.0, 0.85, 0.2, 1))

func update_renderer():
	"""æ›´æ–°æ¸²æŸ“å™¨çŠ¶æ€"""
	if renderer == null or game_mode == null:
		return
	
	renderer.set_grid_manager(game_mode.grid_manager)
	renderer.set_current_piece(game_mode.current_piece)
	renderer.set_next_piece_data(game_mode.next_piece_data)
	
	# æ­Œè¯æ¨¡å¼è®¾ç½®æ–¹å—é¢œè‰²
	if game_mode is LyricModeController:
		var current_color = game_mode.get_piece_color()
		var next_color = game_mode.get_next_piece_color()
		renderer.set_lyric_piece_colors(current_color, next_color)
		renderer.set_special_block_info(Color.TRANSPARENT, "")  # æ­Œè¯æ¨¡å¼æ— ç‰¹æ®Šæ–¹å—
		renderer.set_next_special_block_info(Color.TRANSPARENT, "")  # æ­Œè¯æ¨¡å¼æ— ç‰¹æ®Šæ–¹å—
		renderer.set_snake_info([], false, false)  # æ­Œè¯æ¨¡å¼æ— è´ªåƒè›‡
	elif game_mode is ClassicModeController:
		# ç»å…¸æ¨¡å¼å¤„ç†å½“å‰ç‰¹æ®Šæ–¹å—
		if game_mode.is_special_block and game_mode.special_block_type >= 0:
			var color = game_mode.equipment_system.get_special_block_color(game_mode.special_block_type)
			var symbol = game_mode.equipment_system.get_special_block_symbol(game_mode.special_block_type)
			renderer.set_special_block_info(color, symbol)
		else:
			renderer.set_special_block_info(Color.TRANSPARENT, "")
		
		# ç»å…¸æ¨¡å¼å¤„ç†ä¸‹ä¸€ä¸ªç‰¹æ®Šæ–¹å—é¢„è§ˆ
		if game_mode.next_is_special_block and game_mode.next_special_block_type >= 0:
			var next_color = game_mode.equipment_system.get_special_block_color(game_mode.next_special_block_type)
			var next_symbol = game_mode.equipment_system.get_special_block_symbol(game_mode.next_special_block_type)
			renderer.set_next_special_block_info(next_color, next_symbol)
		else:
			renderer.set_next_special_block_info(Color.TRANSPARENT, "")
		
		# å¤„ç†è´ªåƒè›‡
		if game_mode.is_snake_mode and game_mode.snake_controller:
			renderer.set_snake_info(game_mode.snake_controller.get_body_positions(), true, false)
		else:
			renderer.set_snake_info([], false, game_mode.next_is_snake)
	
	renderer.queue_redraw()

func _input(event):
	if game_mode == null:
		return
	
	var is_game_over = game_mode.game_over
	var is_paused = game_mode.paused
	
	# å¤„ç†è´ªåƒè›‡è¾“å…¥ï¼ˆå¦‚æœåœ¨è´ªåƒè›‡æ¨¡å¼ï¼‰
	if game_mode is ClassicModeController and game_mode.is_snake_mode:
		if not is_game_over and not is_paused:
			game_mode.handle_snake_input(event)
		# è´ªåƒè›‡æ¨¡å¼ä¸‹åªå¤„ç†æš‚åœ
		if event is InputEventKey and event.pressed and event.keycode == KEY_ESCAPE:
			_on_pause_toggle()
		return
	
	# å¤„ç†è£‚éš™ä»ªè¾“å…¥ï¼ˆæŒ‰Sé”®ï¼‰
	if event is InputEventKey and event.pressed and event.keycode == KEY_S:
		if not is_game_over and not is_paused:
			if game_mode.equipment_system.try_activate_rift_meter(game_mode.grid_manager):
				# æ˜¾ç¤ºè£‚éš™ä»ªæ•ˆæœ
				combo_label.text = "è£‚éš™ä»ª!" if Global.current_language == "zh" else "Rift!"
				combo_label.add_theme_color_override("font_color", Color(0.3, 0.9, 1.0, 1.0))
				combo_label.scale = Vector2(1.5, 1.5)
				var tween = create_tween()
				tween.tween_property(combo_label, "scale", Vector2(1.0, 1.0), 0.3).set_ease(Tween.EASE_OUT)
				await get_tree().create_timer(1.0).timeout
				if combo_label.text.contains("è£‚éš™ä»ª") or combo_label.text.contains("Rift"):
					combo_label.text = ""
	
	if input_handler:
		input_handler.handle_input(event, is_game_over, is_paused)

# è¾“å…¥ä¿¡å·å¤„ç†
func _on_move_left():
	if game_mode:
		game_mode.move_piece(Vector2i(-1, 0))

func _on_move_right():
	if game_mode:
		game_mode.move_piece(Vector2i(1, 0))

func _on_move_down():
	if game_mode:
		game_mode.move_piece(Vector2i(0, 1))

func _on_rotate():
	if game_mode:
		game_mode.rotate_piece()

func _on_hard_drop():
	if game_mode:
		game_mode.hard_drop()

func _on_pause_toggle():
	toggle_pause()

# æ¸¸æˆæ¨¡å¼ä¿¡å·å¤„ç†
func _on_game_over():
	show_game_over_menu()

func _on_score_changed(score: int):
	score_label.text = TEXTS[Global.current_language]["score"] + str(score)

func _on_lines_changed(lines: int):
	lines_label.text = TEXTS[Global.current_language]["lines"] + str(lines)

func _on_combo_changed(combo_count: int):
	"""è¿å‡»æ•°å˜åŒ–å›è°ƒ"""
	if combo_count >= 2:
		# æ˜¾ç¤ºè¿å‡»
		if Global.current_language == "zh":
			combo_label.text = str(combo_count) + " è¿å‡»ï¼"
		else:
			combo_label.text = str(combo_count) + " Combo!"
		
		# æ ¹æ®è¿å‡»æ•°è®¾ç½®é¢œè‰²
		if combo_count > 10:
			combo_label.add_theme_color_override("font_color", Color(1.0, 0.2, 0.2, 1.0))  # çº¢è‰²
		elif combo_count >= 5:
			combo_label.add_theme_color_override("font_color", Color(1.0, 0.5, 0.1, 1.0))  # æ©™è‰²
		else:
			combo_label.add_theme_color_override("font_color", Color(1.0, 0.8, 0.2, 1.0))  # é»„è‰²
		
		# è¿å‡»åŠ¨ç”»æ•ˆæœ
		combo_label.scale = Vector2(1.3, 1.3)
		var tween = create_tween()
		tween.tween_property(combo_label, "scale", Vector2(1.0, 1.0), 0.2).set_ease(Tween.EASE_OUT)
	else:
		# è¿å‡»ä¸­æ–­ï¼Œæ¸…ç©ºæ˜¾ç¤º
		combo_label.text = ""

func _on_special_block_effect(effect_type: String, position: Vector2i, destroyed: int):
	"""ç‰¹æ®Šæ–¹å—æ•ˆæœè§¦å‘å›è°ƒ"""
	var effect_names = {"BOMB": "ğŸ’£ç‚¸å¼¹", "LASER_H": "â”æ¨ªæ¿€å…‰", "LASER_V": "â”ƒçºµæ¿€å…‰"}
	var effect_name = effect_names.get(effect_type, effect_type)
	
	# ä¸´æ—¶æ˜¾ç¤ºç‰¹æ•ˆä¿¡æ¯åœ¨è¿å‡»æ ‡ç­¾ä½ç½®
	combo_label.text = effect_name + "! +" + str(destroyed * 5)
	combo_label.add_theme_color_override("font_color", Color(1.0, 0.5, 0, 1.0))  # æ©™è‰²
	combo_label.scale = Vector2(1.5, 1.5)
	var tween = create_tween()
	tween.tween_property(combo_label, "scale", Vector2(1.0, 1.0), 0.3).set_ease(Tween.EASE_OUT)
	
	# 1.5ç§’åæ¸…é™¤
	await get_tree().create_timer(1.5).timeout
	if combo_label.text.contains(effect_name):
		combo_label.text = ""

func _on_snake_mode_changed(is_snake: bool):
	"""è´ªåƒè›‡æ¨¡å¼å˜åŒ–å›è°ƒ"""
	if is_snake:
		combo_label.text = "ğŸè´ªåƒè›‡!" if Global.current_language == "zh" else "ğŸSnake!"
		combo_label.add_theme_color_override("font_color", Color(0.4, 0.9, 0.4, 1.0))  # ç»¿è‰²
		combo_label.scale = Vector2(1.5, 1.5)
		var tween = create_tween()
		tween.tween_property(combo_label, "scale", Vector2(1.0, 1.0), 0.3).set_ease(Tween.EASE_OUT)

func _on_beat_rating_changed(rating: int, text: String, color: Color, beat_combo: int):
	"""èŠ‚æ‹è¯„ä»·å˜åŒ–å›è°ƒ"""
	print("[Main] æ”¶åˆ°èŠ‚æ‹è¯„ä»·: ", text, " è¿å‡»: ", beat_combo)
	renderer.set_beat_rating_info(text, color, beat_combo)
	
	# è®¾ç½®è¯„ä»·æ˜¾ç¤ºçŠ¶æ€
	beat_rating_display_timer = 1.5  # æ˜¾ç¤º1.5ç§’
	var status_text = text
	if beat_combo > 0:
		status_text += " x" + str(beat_combo)
	last_beat_display_text = status_text
	last_beat_display_color = color

func _on_lyric_changed(japanese: String, chinese: String):
	if chinese_lyric_label:
		# æ ¹æ®æ˜¯å¦æ˜¯ä¸­æ–‡æ­Œæ›²é€‰æ‹©æ˜¾ç¤ºæ ‡ç­¾
		var label_text = "ä¸­æ–‡æ­Œè¯:\n" if game_mode.is_chinese_song else "ä¸­æ–‡ç¿»è¯‘:\n"
		chinese_lyric_label.text = label_text + chinese

func _on_all_blocks_placed():
	"""æ‰€æœ‰æ­Œè¯æ–¹å—å·²è½å®Œ"""
	print("[Main] æ”¶åˆ°æ–¹å—è½å®Œä¿¡å·")
	print("  - éŸ³ä¹æ˜¯å¦æ’­æ”¾ä¸­: ", music_player.playing)
	print("  - æ¸¸æˆæ˜¯å¦ç»“æŸ: ", game_mode.game_over)
	print("  - æ¸¸æˆæ˜¯å¦æš‚åœ: ", game_mode.paused)
	
	# ç©å®¶å·²æ­»äº¡æˆ–å·²æš‚åœï¼Œä¸å¤„ç†
	if game_mode.game_over or game_mode.paused:
		print("[Main] ç©å®¶å·²æ­»äº¡æˆ–å·²æš‚åœï¼Œä¸å¤„ç†å®Œæˆä¿¡å·")
		return
	
	# è®°å½•æ–¹å—è½å®Œæ—¶é—´
	game_mode.add_early_completion_bonus()  # ç°åœ¨åªè®°å½•æ—¶é—´
	
	# æ£€æŸ¥éŸ³ä¹æ˜¯å¦è¿˜åœ¨æ’­æ”¾
	if music_player.playing:
		print("[Main] æ–¹å—åœ¨éŸ³ä¹ç»“æŸå‰è½å®Œï¼Œç­‰å¾…éŸ³ä¹ç»“æŸè®¡ç®—å¥–åŠ±")
		# æ ‡è®°æ–¹å—å·²è½å®Œï¼Œç­‰å¾…éŸ³ä¹ç»“æŸ
		game_mode.set_meta("blocks_finished_early", true)
	else:
		# éŸ³ä¹å·²ç»“æŸï¼Œè®°å½•éŸ³ä¹ç»“æŸæ—¶é—´å¹¶åº”ç”¨å¥–åŠ±
		print("[Main] éŸ³ä¹å·²ç»“æŸä¸”æ–¹å—è½å®Œï¼Œè®¡ç®—å¥–åŠ±å¹¶æ˜¾ç¤ºå®Œæˆèœå•")
		if game_mode.music_complete_time < 0:
			game_mode.set_music_complete_time(game_mode.music_time)
		game_mode.apply_completion_bonus()
		show_song_complete_menu()

# UIç›¸å…³
const TEXTS = {
	"zh": {
		"score": "åˆ†æ•°: ",
		"lines": "è¡Œæ•°: ",
		"next": "ä¸‹ä¸€ä¸ª:",
		"game_over": "æ¸¸æˆç»“æŸï¼\næŒ‰ Enter é‡æ–°å¼€å§‹",
		"paused": "æ¸¸æˆæš‚åœ\næŒ‰ P ç»§ç»­",
		"controls": "æ§åˆ¶:\nâ† â†’ ç§»åŠ¨\nâ†‘ æ—‹è½¬\nâ†“ å¿«é€Ÿä¸‹é™\nEnter ç¡¬é™è½\nEsc æš‚åœæ¸¸æˆ",
		"scoring_easy": "è®¡åˆ†è§„åˆ™:\n1è¡Œ = 100åˆ†\n2è¡Œ = 200åˆ†\n3è¡Œ = 400åˆ†\n4è¡Œ = 700åˆ†\n\nè¿å‡»åŠ åˆ†:\nè¿ç»­æ¶ˆé™¤æ—¶\n+åŸå§‹åˆ†Ã—10Ã—è¿å‡»æ•°",
		"scoring_full": "è®¡åˆ†è§„åˆ™:\n1è¡Œ=100 2è¡Œ=200\n3è¡Œ=400 4è¡Œ=700\n5è¡Œ=1200 6è¡Œ=2000\n7è¡Œ=4000\n\nè¿å‡»åŠ åˆ†:\nè¿ç»­æ¶ˆé™¤æ—¶\n+åŸå§‹åˆ†Ã—10Ã—è¿å‡»æ•°",
		"scoring_hard": "è®¡åˆ†è§„åˆ™:\n1è¡Œ=100 2è¡Œ=200\n3è¡Œ=400 4è¡Œ=700\n5è¡Œ=1200 6è¡Œ=2000\n7è¡Œ=4000\n\nè¿å‡»: +åŸå§‹åˆ†Ã—10Ã—è¿å‡»æ•°\n\nå›°éš¾è§„åˆ™:\næ¯2500åˆ†å‡å°‘0.5mså›ºå®šæ—¶é—´",
		"scoring_song": "è®¡åˆ†è§„åˆ™:\n1è¡Œ=100 2è¡Œ=200\n3è¡Œ=400 4è¡Œ=700\n5è¡Œ=1200 6è¡Œ=2000\n7è¡Œ=4000\n\nè¿å‡»: +åŸå§‹åˆ†Ã—10Ã—è¿å‡»æ•°\n\nå®Œæˆå¥–åŠ±:\nè½å—æ—¶é—´ä¸æ­Œè¯ç»“æŸ\nå·®å€¼åœ¨å®¹è®¸èŒƒå›´å†…:\n+233åˆ†ï¼Œå¦åˆ™æ‰£åˆ†"
	},
	"en": {
		"score": "Score: ",
		"lines": "Lines: ",
		"next": "Next:",
		"game_over": "Game Over!\nPress Enter to Restart",
		"paused": "PAUSED\nPress P to Continue",
		"controls": "Controls:\nâ† â†’ Move\nâ†‘ Rotate\nâ†“ Soft Drop\nEnter Hard Drop\nEsc Pause",
		"scoring_easy": "Scoring:\n1 Line = 100pts\n2 Lines = 200pts\n3 Lines = 400pts\n4 Lines = 700pts\n\nCombo Bonus:\nConsecutive clears\n+BaseÃ—10Ã—Combo",
		"scoring_full": "Scoring:\n1-4: 100/200/400/700\n5-7: 1200/2000/4000\n\nCombo Bonus:\nConsecutive clears\n+BaseÃ—10Ã—Combo",
		"scoring_hard": "Scoring:\n1-4: 100/200/400/700\n5-7: 1200/2000/4000\n\nCombo: +BaseÃ—10Ã—N\n\nHard Rule:\n-0.5ms lock time\nper 2500pts",
		"scoring_song": "Scoring:\n1-4: 100/200/400/700\n5-7: 1200/2000/4000\n\nCombo: +BaseÃ—10Ã—N\n\nCompletion:\nFinish within tolerance\n+233pts, else penalty"
	}
}

func update_ui_texts():
	var texts = TEXTS[Global.current_language]
	score_label.text = texts["score"] + "0"
	lines_label.text = texts["lines"] + "0"
	next_label.text = texts["next"]
	game_over_label.text = texts["game_over"]
	controls_label.text = texts["controls"]
	
	# æ ¹æ®æ¨¡å¼é€‰æ‹©è®¡åˆ†è§„åˆ™æ–‡æœ¬
	if Global.lyric_mode_enabled:
		# æ­Œè¯æ¨¡å¼
		scoring_label.text = texts["scoring_song"]
	else:
		# ç»å…¸æ¨¡å¼
		if Global.classic_difficulty == 0:
			# ç®€å•æ¨¡å¼
			scoring_label.text = texts["scoring_easy"]
		elif Global.classic_difficulty == 2:
			# å›°éš¾æ¨¡å¼
			scoring_label.text = texts["scoring_hard"]
		else:
			# æ™®é€šæ¨¡å¼
			scoring_label.text = texts["scoring_full"]

func toggle_pause():
	if game_mode == null:
		return
	
	game_mode.toggle_pause()
	
	if game_mode.paused:
		pause_menu.show_menu()
		pause_menu.update_ui_texts()
		# æš‚åœæ—¶ä¸éšè—UIï¼Œä¿æŒå¯è§ï¼ˆæœ‰åŠé€æ˜é®ç½©ï¼‰
		if music_player.playing:
			music_player.stream_paused = true
	else:
		pause_menu.hide()
		if music_player.stream_paused:
			music_player.stream_paused = false

func show_game_over_menu():
	if game_mode == null:
		return
	
	# ç»å…¸æ¨¡å¼ï¼šä¿å­˜æœ€é«˜åˆ†
	if game_mode is ClassicModeController:
		var updated = Global.update_classic_score(Global.classic_difficulty, game_mode.score, game_mode.lines_cleared_total)
		if updated:
			print("[ç»å…¸æ¨¡å¼] æ–°çºªå½•ï¼å·²æ›´æ–°æœ€é«˜åˆ†")
	
	game_over_menu.show()
	game_over_menu.update_ui_texts()
	game_over_menu.set_score(game_mode.score, game_mode.lines_cleared_total)
	
	score_label.hide()
	lines_label.hide()
	next_label.hide()
	controls_label.hide()
	scoring_label.hide()
	chinese_lyric_label.hide()
	combo_label.text = ""  # æ¸…ç©ºè¿å‡»æ˜¾ç¤º
	
	if music_player.playing:
		music_player.stop()

func show_song_complete_menu():
	if game_mode == null:
		print("[æ­Œæ›²å®Œæˆ] é”™è¯¯: game_modeä¸ºnull")
		return
	
	print("[æ­Œæ›²å®Œæˆ] æ˜¾ç¤ºæ­Œæ›²å®Œæˆèœå•")
	print("  - å½“å‰åˆ†æ•°: ", game_mode.score)
	print("  - æ¶ˆé™¤è¡Œæ•°: ", game_mode.lines_cleared_total)
	
	# ä¿å­˜æœ€é«˜åˆ†
	var is_new_record = false
	if Global.selected_song.has("name"):
		var song_name = Global.selected_song["name"]
		is_new_record = Global.update_song_score(song_name, game_mode.score, game_mode.lines_cleared_total)
		if is_new_record:
			print("  - æ–°çºªå½•ï¼å·²æ›´æ–°æœ€é«˜åˆ†")
		
	game_mode.paused = true
	song_complete_menu.show()
	song_complete_menu.update_ui_texts()
	song_complete_menu.set_score(game_mode.score, game_mode.lines_cleared_total, is_new_record)
	
	# éšè—æ¸¸æˆUIå…ƒç´ 
	score_label.hide()
	lines_label.hide()
	next_label.hide()
	controls_label.hide()
	scoring_label.hide()
	chinese_lyric_label.hide()
	combo_label.text = ""  # æ¸…ç©ºè¿å‡»æ˜¾ç¤º
	
	if music_player.playing:
		music_player.stop()
	
	print("æ­Œæ›²å·²å®Œæˆï¼")

func _on_music_finished():
	"""éŸ³ä¹æ’­æ”¾å®Œæˆå›è°ƒ"""
	print("[éŸ³ä¹å®Œæˆ] éŸ³ä¹æ’­æ”¾ç»“æŸ")
	
	# ç»å…¸æ¨¡å¼ï¼šå¾ªç¯æ’­æ”¾BGM
	if game_mode is ClassicModeController and music_player.stream:
		music_player.play()
		print("[ç»å…¸æ¨¡å¼] BGMå¾ªç¯æ’­æ”¾")
	# æ­Œè¯æ¨¡å¼ï¼šæ£€æŸ¥æ˜¯å¦æ»¡è¶³å®Œæˆæ¡ä»¶
	elif game_mode is LyricModeController:
		print("[æ­Œè¯æ¨¡å¼] éŸ³ä¹ç»“æŸï¼Œæ£€æŸ¥å®Œæˆæ¡ä»¶:")
		print("  - game_over: ", game_mode.game_over)
		print("  - paused: ", game_mode.paused)
		print("  - æ–¹å—å·²è½å®Œ: ", game_mode.is_song_complete())
		print("  - æå‰å®Œæˆæ ‡è®°: ", game_mode.has_meta("blocks_finished_early"))
		
		# è®°å½•éŸ³ä¹ç»“æŸæ—¶é—´
		game_mode.set_music_complete_time(game_mode.music_time)
		
		# æ¡ä»¶ï¼šç©å®¶å­˜æ´» + æœªæš‚åœ
		if not game_mode.game_over and not game_mode.paused:
			# å¦‚æœæ–¹å—å·²æå‰å®Œæˆæˆ–ç°åœ¨å®Œæˆï¼Œè®¡ç®—å¥–åŠ±å¹¶æ˜¾ç¤ºå®Œæˆèœå•
			if game_mode.has_meta("blocks_finished_early") or game_mode.is_song_complete():
				print("[æ­Œæ›²å®Œæˆ] æ»¡è¶³æ‰€æœ‰æ¡ä»¶ï¼Œè®¡ç®—å¥–åŠ±å¹¶æ˜¾ç¤ºå®Œæˆèœå•")
				# å¦‚æœæ–¹å—è½å®Œæ—¶é—´æœªè®°å½•ï¼Œç°åœ¨è®°å½•
				if game_mode.blocks_complete_time < 0:
					game_mode.blocks_complete_time = game_mode.music_time
				game_mode.apply_completion_bonus()
				show_song_complete_menu()
			else:
				print("[æ­Œæ›²å®Œæˆ] æ–¹å—æœªè½å®Œï¼Œç­‰å¾…å®Œæˆ...")
				# æ ‡è®°éŸ³ä¹å·²ç»“æŸ
				game_mode.set_meta("music_finished", true)
		else:
			print("[æ­Œæ›²å®Œæˆ] ç©å®¶å·²æ­»äº¡æˆ–å·²æš‚åœ")

func _on_resume_game():
	toggle_pause()

func _on_restart_game():
	get_tree().reload_current_scene()

func _on_select_song():
	get_tree().change_scene_to_file("res://UI/SongSelection.tscn")

func _on_goto_options():
	pause_menu.hide()
	
	# éšè—æ‰€æœ‰æ¸¸æˆUIå…ƒç´ 
	score_label.hide()
	lines_label.hide()
	next_label.hide()
	controls_label.hide()
	scoring_label.hide()
	chinese_lyric_label.hide()
	
	var options_scene = load("res://UI/OptionsMenu.tscn")
	var options_instance = options_scene.instantiate()
	options_instance.set_meta("from_game", true)
	options_instance.tree_exited.connect(_on_options_closed)
	get_tree().root.add_child(options_instance)

func _on_options_closed():
	if game_mode and game_mode.paused:
		# æ¢å¤æ¸¸æˆUIå…ƒç´ 
		score_label.show()
		lines_label.show()
		next_label.show()
		controls_label.show()
		scoring_label.show()  # æ‰€æœ‰æ¨¡å¼éƒ½æ˜¾ç¤ºè®¡åˆ†è§„åˆ™
		
		# æ ¹æ®æ¨¡å¼æ˜¾ç¤ºå¯¹åº”çš„UI
		if game_mode is LyricModeController:
			chinese_lyric_label.show()
		else:
			chinese_lyric_label.hide()
		
		pause_menu.show_menu()
		pause_menu.update_ui_texts()
		update_ui_texts()

func _on_goto_menu():
	# æ¸…ç†éŸ³ä¹å¯è§†åŒ–
	if music_visualizer:
		music_visualizer.queue_free()
		music_visualizer = null
	get_tree().change_scene_to_file("res://UI/MainMenu.tscn")

func _setup_music_visualizer():
	"""è®¾ç½®éŸ³ä¹å¯è§†åŒ–èƒŒæ™¯"""
	print("[MusicVisualizer] å¼€å§‹è®¾ç½®éŸ³ä¹å¯è§†åŒ–...")
	
	if music_visualizer != null:
		print("[MusicVisualizer] å·²å­˜åœ¨ï¼Œè·³è¿‡")
		return
	
	# è·å–è§†å£å¤§å°
	var viewport_size = get_viewport().get_visible_rect().size
	print("[MusicVisualizer] è§†å£å¤§å°: ", viewport_size)
	
	# åˆ›å»ºä¸€ä¸ªCanvasLayeræ¥ç¡®ä¿åœ¨æœ€åº•å±‚
	var bg_layer = CanvasLayer.new()
	bg_layer.name = "VisualizerLayer"
	bg_layer.layer = -1  # åœ¨å…¶ä»–UIå±‚ä¹‹ä¸‹
	add_child(bg_layer)
	print("[MusicVisualizer] CanvasLayerå·²æ·»åŠ ")
	
	# æ·»åŠ èƒŒæ™¯è‰²
	var bg_color = ColorRect.new()
	bg_color.name = "VisualizerBG"
	bg_color.color = Color(0.08, 0.08, 0.15, 1.0)  # æ·±è“è‰²èƒŒæ™¯
	bg_color.position = Vector2.ZERO
	bg_color.size = viewport_size
	bg_layer.add_child(bg_color)
	print("[MusicVisualizer] èƒŒæ™¯è‰²å·²æ·»åŠ ï¼Œå¤§å°: ", bg_color.size)
	
	# åˆ›å»ºå¯è§†åŒ–å™¨
	music_visualizer = MusicVisualizer.new()
	music_visualizer.name = "MusicVisualizer"
	music_visualizer.position = Vector2.ZERO
	music_visualizer.size = viewport_size
	bg_layer.add_child(music_visualizer)
	
	print("[MusicVisualizer] éŸ³ä¹å¯è§†åŒ–èƒŒæ™¯å·²åˆ›å»ºï¼Œå¤§å°: ", music_visualizer.size)
